--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,11 @@ body {
   box-shadow: 1px 1px rgba(0, 0, 0, 0.1);
   margin-bottom: 4rem;
 }
-h1 {
+h1.big {
   font-size: 8rem;
+}
+h6 {
+  margin: 0;
 }
 
 ul > li {
